Add resultsCount in ListController and template.

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -10,8 +10,8 @@
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
-    <!-- TODO #3 - Use the same list display from search.html -->
     <div th:fragment="list_all">
+        <h2 th:text="${resultsCount != null} ? 'Result(s): ' + ${resultsCount}"></h2>
         <table th:each = "job : ${jobs}" class="job-listing">
             <tr th:each = "column : ${job}">
                 <td th:text="${column.key}"></td>
